// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NISessionWelcome with accounts has the expected html structure 1`] = `
"<div class=\\"ni-session\\">
   <div class=\\"ni-session-container\\">
      <div class=\\"ni-session-header\\">
         <a>&nbsp;</a>
         <div class=\\"ni-session-title\\">
            Welcome to Cosmos!
         </div>
<a><i class=\\"material-icons\\">help_outline</i></a>
</div>
<div class=\\"ni-session-main\\">
   <div class=\\"ni-li-session\\">
      <div class=\\"ni-li-session-icon\\">
         <i class=\\"material-icons\\">lock</i>
      </div>
<div class=\\"ni-li-session-text\\">
   <div class=\\"ni-li-session-title\\">
      Sign in with password
   </div>
<div class=\\"ni-li-session-subtitle\\">
   If you have an account, choose this option
</div>
</div>
</div>
<div class=\\"ni-li-session\\">
   <div class=\\"ni-li-session-icon\\">
      <i class=\\"material-icons\\">create</i>
   </div>
<div class=\\"ni-li-session-text\\">
   <div class=\\"ni-li-session-title\\">
      Create new account
   </div>
<div class=\\"ni-li-session-subtitle\\">
   Generate a brand new seed and account
</div>
</div>
</div>
<div class=\\"ni-li-session\\">
   <div class=\\"ni-li-session-icon\\">
      <i class=\\"material-icons\\">settings_backup_restore</i>
   </div>
<div class=\\"ni-li-session-text\\">
   <div class=\\"ni-li-session-title\\">
      Restore account from seed
   </div>
<div class=\\"ni-li-session-subtitle\\">
   If you have a seed, choose this option
</div>
</div>
</div>
<div class=\\"ni-li-session\\">
   <div class=\\"ni-li-session-icon\\">
      <i class=\\"material-icons\\">usb</i>
   </div>
<div class=\\"ni-li-session-text\\">
   <div class=\\"ni-li-session-title\\">
      Sign in with hardware
   </div>
<div class=\\"ni-li-session-subtitle\\">
   If you have a Ledger Wallet, choose this option
</div>
</div>
</div>
<div class=\\"fundraiser-warning\\">
   <div class=\\"fundraiser-warning__title\\">
      WARNING – DO NOT ENTER YOUR FUNDRAISER SEED. THIS SOFTWARE HAS NOT BEEN AUDITED. NEVER ENTER YOUR FUNDRAISER SEED 12 WORDS ONTO AN ONLINE COMPUTER.
   </div>
<div class=\\"fundraiser-warning__subtitle\\">
   Even when we do start supporting fundraiser seeds, don't use it except for testing or with small amounts. We will release a command-line cli to use for off-line signing of transactions, and we will also add hardware support for this UI.
</div>
</div>
</div>
<div class=\\"ni-session-footer\\"></div>
</div>
</div>"
`;

exports[`NISessionWelcome without accounts has the expected html structure 1`] = `
"<div class=\\"ni-session\\">
   <div class=\\"ni-session-container\\">
      <div class=\\"ni-session-header\\">
         <a>&nbsp;</a>
         <div class=\\"ni-session-title\\">
            Welcome to Cosmos!
         </div>
<a><i class=\\"material-icons\\">help_outline</i></a>
</div>
<div class=\\"ni-session-main\\">
   <!---->
   <div class=\\"ni-li-session\\">
      <div class=\\"ni-li-session-icon\\">
         <i class=\\"material-icons\\">create</i>
      </div>
<div class=\\"ni-li-session-text\\">
   <div class=\\"ni-li-session-title\\">
      Create new account
   </div>
<div class=\\"ni-li-session-subtitle\\">
   Generate a brand new seed and account
</div>
</div>
</div>
<div class=\\"ni-li-session\\">
   <div class=\\"ni-li-session-icon\\">
      <i class=\\"material-icons\\">settings_backup_restore</i>
   </div>
<div class=\\"ni-li-session-text\\">
   <div class=\\"ni-li-session-title\\">
      Restore account from seed
   </div>
<div class=\\"ni-li-session-subtitle\\">
   If you have a seed, choose this option
</div>
</div>
</div>
<div class=\\"ni-li-session\\">
   <div class=\\"ni-li-session-icon\\">
      <i class=\\"material-icons\\">usb</i>
   </div>
<div class=\\"ni-li-session-text\\">
   <div class=\\"ni-li-session-title\\">
      Sign in with hardware
   </div>
<div class=\\"ni-li-session-subtitle\\">
   If you have a Ledger Wallet, choose this option
</div>
</div>
</div>
<div class=\\"fundraiser-warning\\">
   <div class=\\"fundraiser-warning__title\\">
      WARNING – DO NOT ENTER YOUR FUNDRAISER SEED. THIS SOFTWARE HAS NOT BEEN AUDITED. NEVER ENTER YOUR FUNDRAISER SEED 12 WORDS ONTO AN ONLINE COMPUTER.
   </div>
<div class=\\"fundraiser-warning__subtitle\\">
   Even when we do start supporting fundraiser seeds, don't use it except for testing or with small amounts. We will release a command-line cli to use for off-line signing of transactions, and we will also add hardware support for this UI.
</div>
</div>
</div>
<div class=\\"ni-session-footer\\"></div>
</div>
</div>"
`;
